--- a/assets/scss/elements/_header.scss
+++ b/assets/scss/elements/_header.scss
@@ -103,6 +103,7 @@ header .rts-btn {
               svg {
                 path {
                   stroke: white;
+                  stroke-width: 2px;
                 }
               }
             }
