--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -54,7 +54,6 @@
 @import "default/shortcode";
 @import "default/animations";
 
-
 /* Elements  */
 @import "elements/stacked-images";
 @import "elements/common-helper";
@@ -63,6 +62,7 @@
 @import "elements/dropdown";
 @import "elements/button";
 @import "elements/banner";
+@import "elements/calendar";
 @import "elements/cta";
 @import "elements/footer";
 @import "elements/service";
