--- a/assets/scss/default/_mixins.scss
+++ b/assets/scss/default/_mixins.scss
@@ -2,3 +2,17 @@
   font-size: 33px;
   line-height: 110%;
 }
+@mixin center-it {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@mixin monospaced($color: black) {
+  font-family: "Sono";
+  font-weight: 475;
+  font-size: 13px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: $color;
+}
