--- a/assets/scss/elements/_calendar.scss
+++ b/assets/scss/elements/_calendar.scss
@@ -4,6 +4,7 @@
 // .fc .fc-daygrid-event-harness:not(:first-of-type) {
 //   padding-top: 10px;
 // }
+
 .fc-event {
   cursor: pointer;
   background-color: #cf9d39;
@@ -15,7 +16,7 @@
     text-transform: uppercase;
     font-size: 13px;
     letter-spacing: 1px;
-    font-weight: 475;
+    font-weight: 525;
     padding-left: 8px;
     padding-right: 8px;
     text-overflow: ellipsis;
@@ -146,7 +147,7 @@ section {
   }
 }
 
-$inner-border-color: #f3f3f3;
+$inner-border-color: #e7e7e7;
 
 //* Modal styling
 $modal-margin: 3rem;
@@ -173,6 +174,9 @@ $modal-margin: 3rem;
           font-weight: 600;
           font-size: 24px;
           letter-spacing: 0.1px;
+          line-height: 128%;
+          width: 92%;
+          padding-bottom: .55rem;
         }
         .close-button-wrapper {
           background-color: #f9f9f9;
@@ -181,6 +185,9 @@ $modal-margin: 3rem;
           width: 40px;
           position: relative;
           border: none;
+          position: absolute;
+          top: 2rem;
+          right: 2rem;
           .btn-close {
             padding: 0;
             margin: 0;
@@ -196,8 +203,8 @@ $modal-margin: 3rem;
         }
       }
       .modal-body-wrapper {
-        line-height: 120%;
-        font-size: 17px;
+        line-height: 140%;
+        font-size: 16px;
         padding: $modal-margin;
         padding-top: 0;
         .date-wrapper {
@@ -217,13 +224,14 @@ $modal-margin: 3rem;
         }
         hr {
           background-color: $inner-border-color;
-          margin: 1.25rem 0;
+          margin: 1.75rem 0 1.55rem 0;
           opacity: 1;
         }
         .modal-body {
           padding: 0;
           color: #767364;
           letter-spacing: 0.2px;
+          white-space: pre-line;
         }
       }
       .modal-footer {
@@ -232,17 +240,14 @@ $modal-margin: 3rem;
         padding-top: 1rem;
         padding-left: $mf-padding;
         padding-right: $mf-padding;
-        gap: 2px;
+        gap: 5px;
         border-top-color: transparent;
         .btn {
-          font-family: "Inter";
+          @include monospaced(white);
           display: flex;
           align-items: center;
           justify-content: center;
-          // text-transform: lowercase;
-          // letter-spacing: 1px;
-          font-size: 15px;
-          height: 45px;
+          height: 35px;
           border-radius: 1px;
           background-color: var(--color-secondary);
           padding-bottom: 6px;
@@ -257,7 +262,7 @@ $modal-margin: 3rem;
             border: none;
           }
           &.modal-attachment {
-            border: 2px solid var(--color-secondary);
+            border: 1.5px solid var(--color-secondary);
             background-color: transparent;
             color: var(--color-secondary);
             &:hover {
@@ -316,6 +321,7 @@ $outline-color: #e6e6e6;
       hr {
         background-color: $inner-border-color;
         margin: 1.25rem 0;
+        margin-bottom: 1.1rem;
         opacity: 1;
       }
       .event-list-description {
@@ -325,7 +331,7 @@ $outline-color: #e6e6e6;
       }
       .event-list-footer {
         padding: 2rem 0 0 0;
-        gap: 3px;
+        gap: 5px;
         border-top-color: transparent;
         .event-list-flyer-btn,
         .event-list-link-btn {
@@ -333,16 +339,14 @@ $outline-color: #e6e6e6;
           display: flex;
           align-items: center;
           justify-content: center;
-          // font-size: 12px;
-          font-weight: 600;
-          height: 45px;
+          height: 35px;
           letter-spacing: 2px;
           text-transform: uppercase;
           border-radius: 1px;
           background-color: var(--color-secondary);
           padding-bottom: 4.5px;
-          padding-left: 3rem;
-          padding-right: 3rem;
+          padding-left: 1rem;
+          padding-right: 1rem;
           transition: all 0.25s ease;
           border: none;
           &:hover {
@@ -351,11 +355,11 @@ $outline-color: #e6e6e6;
           &:active,
           &:focus {
             box-shadow: none;
-            border: none;
+            // border: none;
           }
         }
         .event-list-flyer-btn {
-          border: 2px solid var(--color-secondary);
+          border: 1.5px solid var(--color-secondary);
           background-color: transparent;
           color: var(--color-secondary);
           &:hover {
@@ -387,6 +391,63 @@ $outline-color: #e6e6e6;
       width: auto;
       margin-right: 15px;
       opacity: 0.23;
+    }
+  }
+}
+
+.events-list-container {
+  margin-top: -74px;
+  .events-list-heading {
+    padding-left: 0.5rem;
+    padding-bottom: 2rem;
+    font-family: "IKOB";
+    font-size: 45px;
+    color: var(--color-primary);
+    margin-bottom: 0;
+  }
+
+  #events-list {
+    .events-list-wrapper {
+      // gap: 15px;
+      .event-list-item {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        &:hover {
+          // box-shadow: none;
+        }
+        .event-list-title {
+          font-size: 22px;
+          padding-bottom: 0.35rem;
+        }
+
+        .event-list-date-wrapper {
+          font-size: 14px;
+        }
+        .event-list-description {
+          line-height: 151%;
+          font-size: 14px;
+        }
+        .event-list-footer {
+          padding-bottom: 4px;
+        }
+      }
+    }
+  }
+  .all-events-link {
+    display: block;
+    text-align: right;
+    padding-left: 0.5rem;
+    padding-top: 0.75rem;
+    padding-right: 1rem;
+    font-family: "Sono";
+    font-weight: 475;
+    font-size: 13px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: black;
+    opacity: 0.6;
+    &:hover {
+      opacity: 1;
     }
   }
 }
